src/test/deca/etapeB/invalid/binary_op_bool/lt_float_string.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 11 : mauvais typage de l'inégalité
// 

{
    float a;
    boolean b;
    b = "toto" < a;
}
